CREATE TABLE users
(
    id         UUID PRIMARY KEY,
    role       VARCHAR(50)                         NOT NULL,
    username   VARCHAR(50)                         NOT NULL UNIQUE,
    email      VARCHAR(100)                        NOT NULL UNIQUE,
    password   VARCHAR(255)                        NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE INDEX idx_users_username ON users (username);
CREATE INDEX idx_users_email ON users (email);