Table "users" {
  "id" UUID [pk]
  "role" VARCHAR(50) [not null]
  "username" VARCHAR(50) [unique, not null]
  "email" VARCHAR(100) [unique, not null]
  "password" VARCHAR(255) [not null]
  "first_name" VARCHAR(100)
  "last_name" VARCHAR(100)
  "created_at" TIMESTAMP [not null, default: `CURRENT_TIMESTAMP`]
  "updated_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  Indexes {
    username [name: "idx_users_username"]
    email [name: "idx_users_email"]
  }
}

Table "properties" {
  "id" UUID [pk]
  "owner_id" UUID [not null]
  "title" VARCHAR(255) [not null]
  "description" TEXT
  "city" VARCHAR(255) [not null]
  "country" VARCHAR(255) [not null]
  "postal_code" VARCHAR(20) [not null]
  "street" VARCHAR(255) [not null]
  "street_number" VARCHAR(50) [not null]
  "latitude" DECIMAL(12,8) [not null]
  "longitude" DECIMAL(12,8) [not null]
  "property_type" VARCHAR(50)
  "amenities" jsonb [not null, default: `'[]'::jsonb`]
  "created_at" TIMESTAMP [not null, default: `CURRENT_TIMESTAMP`]
  "updated_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  Indexes {
    owner_id [name: "idx_properties_owner"]
  }
}

Table "units" {
  "id" UUID [pk]
  "property_id" UUID [not null]
  "name" VARCHAR(255) [not null]
  "description" TEXT
  "price_per_night" DECIMAL(10,2) [not null]
  "capacity" INT [not null]
  "unit_type" VARCHAR(255) [not null]
  "unit_number" VARCHAR(50) [not null]
  "floor" INTEGER [not null]
  "bedrooms" INTEGER [not null, default: 0]
  "beds" INTEGER [not null, default: 0]
  "amenities" jsonb [not null, default: `'[]'::jsonb`]
  "created_at" TIMESTAMP [not null, default: `CURRENT_TIMESTAMP`]
  "updated_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  Checks {
    `capacity > 0` [name: 'check_capacity']
    `price_per_night > 0` [name: 'check_price_per_night']
  }

  Indexes {
    property_id [name: "idx_units_property"]
  }
}

Table "reservations" {
  "id" UUID [pk]
  "user_id" UUID [not null]
  "unit_id" UUID [not null]
  "start_date" DATE [not null]
  "end_date" DATE [not null]
  "status" VARCHAR(50) [not null]
  "price_per_night_snapshot" NUMERIC(10,2)
  "total_price" NUMERIC(10,2)
  "guest_message" TEXT
  "payment_currency" VARCHAR(3) [not null, default: 'PLN']
  "payment_exchange_rate" NUMERIC(19,4) [not null, default: 1.0000]
  "guest_email" VARCHAR(255)
  "created_at" TIMESTAMP [not null, default: `CURRENT_TIMESTAMP`]
  "updated_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  Checks {
    `end_date >= start_date` [name: 'check_dates']
  }

  Indexes {
    user_id [name: "idx_res_user"]
    unit_id [name: "idx_res_unit"]
  }
}

Table "property_images" {
  "id" UUID [pk]
  "property_id" UUID [not null]
  "url" TEXT [not null]
  "is_main" BOOLEAN
  "created_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  Indexes {
    property_id [name: "idx_property_images_property_id"]
  }
}

Table "unit_images" {
  "id" UUID [pk]
  "unit_id" UUID [not null]
  "url" TEXT [not null]
  "is_main" BOOLEAN
  "created_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  Indexes {
    unit_id [name: "idx_unit_images_unit_id"]
  }
}

Table "reservation_status_history" {
  "id" UUID [pk]
  "reservation_id" UUID [not null]
  "old_status" VARCHAR(50)
  "new_status" VARCHAR(50) [not null]
  "changed_by" UUID [not null]
  "changed_at" TIMESTAMP [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    reservation_id [name: "idx_status_history_res"]
  }
}

Table "settlements" {
  "id" UUID [pk]
  "reservation_id" UUID [unique, not null]
  "status" VARCHAR(50) [not null]
  "accommodation_amount" NUMERIC(12,2) [not null]
  "utilities_amount" NUMERIC(12,2) [not null]
  "deposit_amount" NUMERIC(12,2) [not null]
  "discount_amount" NUMERIC(12,2) [not null]
  "total_amount" NUMERIC(12,2) [not null]
  "amount_paid" NUMERIC(12,2) [not null]
  "balance_due" NUMERIC(12,2) [not null]
  "issued_at" TIMESTAMP
  "paid_at" TIMESTAMP
  "invoice_requested" BOOLEAN [not null, default: false]
  "invoice_pdf_path" VARCHAR(255)
  "company_name" VARCHAR(255)
  "tax_id" VARCHAR(50)
  "company_address" VARCHAR(255)
  "created_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]
  "updated_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  Indexes {
    reservation_id [name: "idx_settlement_reservation_id"]
    status [name: "idx_settlement_status"]
  }
}

Table "settlement_items" {
  "id" UUID [pk]
  "settlement_id" UUID [not null]
  "type" VARCHAR(50) [not null]
  "description" TEXT
  "quantity" NUMERIC(10,2) [not null]
  "unit_price" NUMERIC(12,2) [not null]
  "amount" NUMERIC(12,2) [not null]
  "created_at" TIMESTAMP [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    settlement_id [name: "idx_settlement_item_settlement_id"]
  }
}

Table "unit_settlement_items" {
  "id" UUID [pk]
  "unit_id" UUID [not null]
  "settlement_item_type" VARCHAR(50) [not null]
  "price_per_unit" NUMERIC(10,2) [not null]
  "measurement_unit" VARCHAR(20)
  "billing_type" VARCHAR(20) [not null]
  "created_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  Checks {
    `price_per_unit >= 0` [name: 'check_utility_price']
  }

  Indexes {
    unit_id [name: "idx_unit_settlement_items_unit_id"]
    settlement_item_type [name: "idx_unit_settlement_items_settlement_item_type"]
  }
}

Table "payment_transactions" {
  "id" UUID [pk]
  "settlement_id" UUID [not null]
  "unit_id" UUID [not null]
  "status" VARCHAR(20) [not null]
  "type" VARCHAR(50) [not null]
  "description" TEXT [not null]
  "quantity" NUMERIC(12,2) [not null]
  "unit_price" NUMERIC(12,2) [not null]
  "amount" NUMERIC(12,2) [not null]
  "stripe_session_id" VARCHAR(255) [unique, not null]
  "stripe_event_id" VARCHAR(255) [unique, not null]
  "failure_reason" TEXT
  "created_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  Indexes {
    settlement_id [name: "idx_payment_transactions_settlement_id"]
    status [name: "idx_payment_transactions_status"]
  }
}

Table "media_readings" {
  "id" UUID [pk]
  "settlement_id" UUID [not null]
  "utility_type" VARCHAR(50) [not null]
  "initial_reading" NUMERIC(12,6)
  "initial_reading_status" VARCHAR(50) [not null, default: 'PENDING']
  "final_reading_status" VARCHAR(50) [not null, default: 'PENDING']
  "initial_reading_source" VARCHAR(50)
  "final_reading_source" VARCHAR(50)
  "initial_confidence_score" NUMERIC(12,6)
  "final_reading" NUMERIC(12,6)
  "final_confidence_score" NUMERIC(12,6)
  "consumption_difference" NUMERIC(12,6)
  "unit_price" NUMERIC(12,2) [not null]
  "calculated_cost" NUMERIC(12,2)
  "created_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]
  "updated_at" TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  Checks {
    `final_reading IS NULL
OR initial_reading IS NULL
OR final_reading >= initial_reading`
  }

  Indexes {
    settlement_id [name: "idx_media_readings_settlement_id"]
  }
}

Table "media_reading_upload_attempts" {
  "id" UUID [pk, default: `gen_random_uuid()`]
  "media_reading_id" UUID [not null]
  "meter_image" BYTEA
  "ocr_value" VARCHAR(50)
  "confidence_score" NUMERIC(5,4)
  "status" VARCHAR(50) [not null, check: `status IN (
                      'PENDING',
                      'AUTO_APPROVED',
                      'REQUEST_REUPLOAD',
                      'REQUEST_MANUAL_REVIEW',
                      'MANUALLY_APPROVED'
               )`]
  "reading_type" VARCHAR(20) [not null, check: `reading_type IN ('INITIAL', 'FINAL')`]
  "attempted_at" TIMESTAMP [not null, default: `now()`]

  Indexes {
    media_reading_id [name: "idx_upload_attempts_media_reading_id"]
  }
}

Table "system_events" {
  "id" UUID [pk]
  "timestamp" TIMESTAMP [not null]
  "action_type" VARCHAR(80) [not null]
  "actor_user_id" UUID
  "entity_type" VARCHAR(80)
  "entity_id" UUID
  "details" TEXT

  Indexes {
    timestamp [name: "idx_system_events_timestamp"]
    action_type [name: "idx_system_events_action_type"]
    actor_user_id [name: "idx_system_events_actor_user_id"]
  }
}

Ref "fk_properties_owner":"users"."id" < "properties"."owner_id" [delete: cascade]

Ref "fk_units_property":"properties"."id" < "units"."property_id" [delete: cascade]

Ref "fk_reservations_user":"users"."id" < "reservations"."user_id" [delete: cascade]

Ref "fk_reservations_unit":"units"."id" < "reservations"."unit_id" [delete: cascade]

Ref "fk_property":"properties"."id" < "property_images"."property_id" [delete: cascade]

Ref "fk_unit":"units"."id" < "unit_images"."unit_id" [delete: cascade]

Ref "fk_status_history_reservation":"reservations"."id" < "reservation_status_history"."reservation_id" [delete: cascade]

Ref "fk_status_history_user":"users"."id" < "reservation_status_history"."changed_by" [delete: cascade]

Ref "fk_settlement_reservation":"reservations"."id" < "settlements"."reservation_id" [delete: cascade]

Ref "fk_settlement_item_settlement":"settlements"."id" < "settlement_items"."settlement_id" [delete: cascade]

Ref "fk_unit_settlement_items_unit":"units"."id" < "unit_settlement_items"."unit_id" [delete: cascade]

Ref "fk_payment_transactions_settlement_item":"settlements"."id" < "payment_transactions"."settlement_id" [delete: cascade]

Ref "fk_media_readings_settlement_item":"settlements"."id" < "media_readings"."settlement_id" [delete: cascade]

Ref:"media_readings"."id" < "media_reading_upload_attempts"."media_reading_id" [delete: cascade]


Ref: "reservation_status_history"."id" < "reservations"."end_date"

Ref: "reservation_status_history"."id" < "reservation_status_history"."reservation_id"